<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.lambda.mnemecards.settings.SettingsViewModel" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".settings.SettingsFragment">

        <FrameLayout
            android:id="@+id/fl_overview"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_settings_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginBottom="24dp"
                    android:fontFamily="@font/roboto_condensed_bold"
                    android:textColor="#FFFFFF"
                    android:textSize="21sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:text="Pat" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_settings_image"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginEnd="36dp"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/ic_search_black_24dp"
                    app:civ_border_width="0dp"
                    app:imageUrl="@{viewmodel.photo}"
                    app:layout_constraintBottom_toBottomOf="@id/tv_settings_name"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </FrameLayout>

        <TextView
            android:id="@+id/tv_settings_users"
            app:layout_constraintTop_toBottomOf="@id/fl_overview"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/user_preferences"
            android:fontFamily="@font/roboto_condensed_bold"
            android:textSize="19sp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintWidth_percent=".725"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_settings_preference"
            android:layout_width="0dp"
            app:layout_constraintWidth_percent=".725"
            android:textSize="15sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/roboto_condensed_bold"
            android:text="@string/most_studied_subjects"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_settings_users" />

        <EditText
            android:id="@+id/et_settings_preference"
            app:layout_constraintTop_toBottomOf="@id/tv_settings_preference"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/rectangle"
            android:layout_width="wrap_content"
            android:layout_marginTop="8dp"
            android:width="300dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_settings_prefer_study"
            app:layout_constraintTop_toBottomOf="@id/et_settings_preference"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/do_you_prefer_to_do_most_of_your_studying_on_a_mobile_or_desktop_device"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto_condensed_bold"
            android:layout_width="305dp"
            android:layout_height="wrap_content"/>

        <RadioGroup
            android:id="@+id/rg_settings_preferences_mobile_desktop"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_percent=".75"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/tv_settings_prefer_study"
            app:layout_constraintStart_toStartOf="parent"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent">

                <RadioButton
                    android:id="@+id/rb_settings_mobile"
                    android:buttonTint="@color/colorPrimary"
                    android:text="@string/mobile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tag="Mobile"
                    android:checked="true"
                    app:layout_constraintStart_toStartOf="parent"/>

                <RadioButton
                    android:id="@+id/rb_settings_desktop"
                    android:buttonTint="@color/colorPrimary"
                    android:text="@string/desktop"
                    android:tag="Desktop"
                    android:layout_marginStart="78dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

        </RadioGroup>


        <TextView
            android:id="@+id/tv_settings_prefer_to_study_by"
            app:layout_constraintStart_toStartOf="@id/tv_settings_prefer_study"
            app:layout_constraintTop_toBottomOf="@id/rg_settings_preferences_mobile_desktop"
            android:layout_marginTop="8dp"
            android:text="@string/do_you_prefer_to_study_by"
            android:fontFamily="@font/roboto_condensed_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Spinner
            android:id="@+id/spinner_settings_prefer_to_study_by"
            app:layout_constraintTop_toBottomOf="@id/tv_settings_prefer_to_study_by"
            app:layout_constraintStart_toStartOf="@id/tv_settings_prefer_to_study_by"
            android:background="@drawable/rectangle"
            android:layout_marginTop="8dp"
            android:layout_width="0dp"
            app:layout_constraintWidth_percent=".75"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_settings_frequency"
            app:layout_constraintStart_toStartOf="@id/tv_settings_prefer_to_study_by"
            app:layout_constraintTop_toBottomOf="@id/spinner_settings_prefer_to_study_by"
            android:text="@string/how_frequently_do_you_want_to_study"
            android:fontFamily="@font/roboto_condensed_bold"
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Spinner
            android:id="@+id/spinner_study_frequency"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_percent=".75"
            android:background="@drawable/rectangle"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@id/tv_settings_frequency"
            app:layout_constraintTop_toBottomOf="@id/tv_settings_frequency"/>

        <TextView
            android:id="@+id/tv_settings_notification_frequency"
            android:text="@string/how_often_would_you_like_to_receive_notifications"
            app:layout_constraintStart_toStartOf="@id/tv_settings_frequency"
            app:layout_constraintTop_toBottomOf="@id/spinner_study_frequency"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/roboto_condensed_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Spinner
            android:id="@+id/spinner_notification_frequency"
            app:layout_constraintTop_toBottomOf="@id/tv_settings_notification_frequency"
            app:layout_constraintStart_toStartOf="@id/tv_settings_notification_frequency"
            android:background="@drawable/rectangle"
            app:layout_constraintWidth_percent=".75"
            android:layout_marginTop="8dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_settings_prefer_decks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/spinner_notification_frequency"
            app:layout_constraintStart_toStartOf="@id/spinner_notification_frequency"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/roboto_condensed_bold"
            android:text="@string/do_you_prefer_to_study_from_decks_that_are"/>

        <RadioGroup
            android:id="@+id/rg_settings_preferences_pre_made_custom"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_settings_prefer_decks"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintWidth_percent=".75"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_settings_pre_made_decks"
                android:buttonTint="@color/colorPrimary"
                android:layout_width="wrap_content"
                android:text="@string/pre_made"
                android:checked="true"
                android:tag="pre-made"
                android:layout_height="wrap_content"/>

            <RadioButton
                android:id="@+id/rb_settings_custom_decks"
                android:buttonTint="@color/colorPrimary"
                android:text="@string/custom"
                android:tag="custom"
                android:layout_marginStart="53dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </RadioGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_settings_save"
            app:layout_constraintTop_toBottomOf="@id/rg_settings_preferences_pre_made_custom"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="0dp"
            app:cornerRadius="20dp"
            android:layout_marginTop="8dp"
            android:text="@string/save"
            app:layout_constraintWidth_percent=".75"
            android:layout_height="wrap_content"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>