<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.lambda.mnemecards.edit.EditViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/fl_edit"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_create_deck"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/roboto_condensed_bold"
                    android:text="@string/edit_deck"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </FrameLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fl_edit">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_edit"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_edit_deck_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/roboto_condensed_bold"
                    android:text="@string/deck_info"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

<!--                <TextView-->
<!--                    android:id="@+id/tv_edit_deck_name"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_marginStart="16dp"-->
<!--                    android:layout_marginTop="8dp"-->
<!--                    android:layout_marginEnd="16dp"-->
<!--                    android:fontFamily="@font/roboto_condensed_bold"-->
<!--                    android:text="@string/deck_name"-->
<!--                    app:layout_constraintEnd_toEndOf="parent"-->
<!--                    app:layout_constraintStart_toStartOf="parent"-->
<!--                    app:layout_constraintTop_toBottomOf="@id/tv_edit_deck_info" />-->

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tv_edit_deck_name"
                    app:boxBackgroundColor="@color/design_default_color_background"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_edit_deck_info"
                    android:layout_margin="16dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:hint="@string/deck_name"
                        android:fontFamily="@font/roboto_condensed_bold"
                        android:text="Deck123"
                        android:inputType="text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </com.google.android.material.textfield.TextInputLayout>

                <RadioGroup
                    android:id="@+id/rg_edit_private_public"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="32dp"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_edit_deck_name">

                    <RadioButton
                        android:id="@+id/rb_edit_public"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:button="@null"
                        android:drawableBottom="?android:attr/listChoiceIndicatorSingle"
                        android:drawableTint="@color/colorPrimary"
                        android:gravity="center"
                        android:text="@string/public_" />

                    <RadioButton

                        android:id="@+id/rb_edit_private"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:checked="true"
                        android:button="@null"
                        android:drawableBottom="?android:attr/listChoiceIndicatorSingle"
                        android:drawableTint="@color/colorPrimary"
                        android:gravity="center"
                        android:text="@string/private_" />

                </RadioGroup>


                <TextView
                    android:id="@+id/tv_edit_go_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="64dp"
                    android:fontFamily="@font/roboto_condensed_bold"
                    android:text="@string/go_back"
                    android:textColor="@color/colorPrimary"
                    app:layout_constraintBottom_toBottomOf="@id/btn_edit_save_deck"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/rg_edit_private_public" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_edit_save_deck"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/save"
                    app:cornerRadius="15dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/tv_edit_go_back"
                    app:layout_constraintTop_toBottomOf="@id/rg_edit_private_public"
                    app:layout_constraintWidth_percent=".40" />

                <TextView
                    android:id="@+id/tv_edit_flashcards"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/roboto_condensed_bold"
                    android:text="@string/flashcards"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_edit_go_back" />

                <TextView
                    android:id="@+id/tv_edit_flashcards_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="@string/select_a_card_below_to_edit_card_content_or_add_a_new_card"

                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_edit_flashcards" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_edit_add_card"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:visibility="visible"
                    android:layout_marginTop="8dp"
                    android:text="@string/add_new_card"
                    app:cornerRadius="15dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_edit_flashcards_description"
                    app:layout_constraintWidth_percent=".80" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/card_edit_add"
                    android:visibility="gone"
                    android:layout_width="370dp"
                    android:layout_height="200dp"
                    android:backgroundTint="#FFFFFF"
                    app:strokeColor="#EEEEEE"
                    app:strokeWidth="2dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginStart="8dp"
                    android:useDefaultMargins="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_edit_flashcards_description">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/tv_card_front"
                            android:text="@string/front"
                            android:textSize="12sp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            android:textColor="@color/colorPrimary"
                            android:fontFamily="@font/roboto_condensed_bold"
                            android:layout_marginTop="8dp"
                            android:layout_marginStart="8dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                        <EditText
                            android:id="@+id/et_card_front"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            android:background="@null"
                            android:textSize="20sp"
                            android:gravity="center"
                            android:hint="                                              "
                            app:layout_constraintBottom_toTopOf="@id/view_card_divider"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                        <View
                            android:id="@+id/view_card_divider"
                            android:layout_width="0dp"
                            app:layout_constraintWidth_percent=".9"
                            android:layout_height="1dp"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            android:background="@android:color/darker_gray"/>

                        <TextView
                            android:id="@+id/tv_card_back"
                            app:layout_constraintTop_toBottomOf="@id/view_card_divider"
                            app:layout_constraintStart_toStartOf="parent"
                            android:fontFamily="@font/roboto_condensed_bold"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="8dp"
                            android:text="@string/back"
                            android:textColor="@color/colorPrimary"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                        <EditText
                            android:id="@+id/et_card_back"
                            app:layout_constraintTop_toBottomOf="@id/view_card_divider"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            android:textSize="20sp"
                            android:hint="                                                 "
                            android:layout_marginStart="16dp"
                            android:gravity="center"
                            android:layout_marginEnd="16dp"
                            android:layout_marginTop="32dp"
                            android:background="@null"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>


                    </androidx.constraintlayout.widget.ConstraintLayout>

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_edit_add_card_second"
                    android:visibility="gone"
                    app:cornerRadius="15dp"
                    android:text="@string/add"
                    app:layout_constraintTop_toBottomOf="@id/card_edit_add"
                    app:layout_constraintEnd_toEndOf="@id/card_edit_add"
                    app:layout_constraintWidth_percent=".35"
                    android:layout_marginTop="8dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_edit_cards"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:listDataCard="@{viewModel.listOfCards}"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@id/btn_edit_add_card_second" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_edit_delete"
                    android:layout_width="0dp"
                    app:layout_constraintWidth_percent=".35"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#FFFFFF"
                    android:text="@string/delete"
                    android:textColor="@color/colorPrimary"
                    app:cornerRadius="15dp"
                    app:layout_constraintEnd_toStartOf="@+id/btn_edit_archieve"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/rv_edit_cards"
                    app:strokeColor="@color/colorPrimary"
                    app:strokeWidth="2dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_edit_archieve"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintWidth_percent=".35"
                    android:text="@string/archive"
                    app:cornerRadius="15dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/btn_edit_delete"
                    app:layout_constraintTop_toBottomOf="@id/rv_edit_cards" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.core.widget.NestedScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>